--- a/필기/HTML기초/04_HTML의 Attribute.html
+++ b/필기/HTML기초/04_HTML의 Attribute.html
@@ -8,7 +8,7 @@
 		
 		<a href='http://naver.com'>네이버로</a><br>
 		<a href='http://google.com'>구글로</a><br>
-		<img src='img/img_girl.jpg' width='150'>
+		<img src='img/img_girl.jpg' width='150' alt='이미지가 로드되지 않았습니다'>
 		
 		<hr>
 		<p>
