--- a/필기/CSS 기초/28_opacity.html
+++ b/필기/CSS 기초/28_opacity.html
@@ -37,5 +37,7 @@
 			<img class='img' src='img/img_chania.jpg'>
 			<img class='img' src='img/img_chania.jpg'>
 		</div>
+		
+		<div class='test2'></div>
 	</body>
 </html>
