묵찌빠게임

--- a/javascript_workspace/05_javascript연산자들.html
+++ b/javascript_workspace/05_javascript연산자들.html
@@ -69,7 +69,7 @@
       };
       console.log(typeof c); // 변수 실행 x, 함수를 변수에 담을 수 있다.
       console.log(typeof c()); // 변수 실행, 함수를 변수에 담을 수 있다.
-      console.log(typeof null);
+      console.log(typeof null); //json
     </script>
   </body>
 </html>
